--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@ body {
 .qreport-list {
   list-style: none;
   margin: 0;
-  padding: 4px;
+  padding: 4px 0px;
 
   .list-item {
     height: 36px;
